layout shift fix

--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@ header {
 }
 
 #display {
-    display: flex;
+    display: none;
 }
 #playlists, #selected-playlists {
     height: 130px;
